src/importer/conllu/snapshots/annatto__importer__conllu__tests__labeled_targets.snap
---
source: src/importer/conllu/tests.rs
expression: actual.unwrap()
---
<?xml version="1.0" encoding="UTF-8"?>
<graphml>
    <key id="k0" for="node" attr.name="custom_ns::Case" attr.type="string"/>
    <key id="k1" for="node" attr.name="custom_ns::CustomFeature" attr.type="string"/>
    <key id="k2" for="node" attr.name="custom_ns::Number" attr.type="string"/>
    <key id="k3" for="node" attr.name="custom_ns::Person" attr.type="string"/>
    <key id="k4" for="node" attr.name="custom_ns::PronType" attr.type="string"/>
    <key id="k5" for="node" attr.name="custom_ns::SpaceAfter" attr.type="string"/>
    <key id="k6" for="node" attr.name="custom_ns::Tense" attr.type="string"/>
    <key id="k7" for="node" attr.name="custom_ns::deprel" attr.type="string"/>
    <key id="k8" for="node" attr.name="enh::deprel" attr.type="string"/>
    <key id="k9" for="node" attr.name="annis::doc" attr.type="string"/>
    <key id="k10" for="node" attr.name="annis::layer" attr.type="string"/>
    <key id="k11" for="node" attr.name="custom_ns::lemma" attr.type="string"/>
    <key id="k12" for="node" attr.name="annis::node_type" attr.type="string"/>
    <key id="k13" for="node" attr.name="sent_id" attr.type="string"/>
    <key id="k14" for="node" attr.name="text" attr.type="string"/>
    <key id="k15" for="node" attr.name="annis::tok" attr.type="string"/>
    <key id="k16" for="node" attr.name="custom_ns::upos" attr.type="string"/>
    <key id="k17" for="node" attr.name="custom_ns::xpos" attr.type="string"/>
    <graph edgedefault="directed" parse.order="nodesfirst" parse.nodeids="free" parse.edgeids="canonical">
        <node id="custom_root">
            <data key="k12">corpus</data>
        </node>
        <node id="custom_root/website_example">
            <data key="k12">corpus</data>
            <data key="k9">website_example</data>
        </node>
        <node id="custom_root/website_example#t5">
            <data key="k0">Nom</data>
            <data key="k10">default_layer</data>
            <data key="k11">they</data>
            <data key="k12">node</data>
            <data key="k15">They</data>
            <data key="k16">PRON</data>
            <data key="k17">PRP</data>
            <data key="k2">Plur</data>
            <data key="k7">nsubj</data>
            <data key="k8">nsubj</data>
        </node>
        <node id="custom_root/website_example#t6">
            <data key="k10">default_layer</data>
            <data key="k11">buy</data>
            <data key="k12">node</data>
            <data key="k15">buy</data>
            <data key="k16">VERB</data>
            <data key="k17">VBP</data>
            <data key="k2">Plur</data>
            <data key="k3">3</data>
            <data key="k6">Pres</data>
        </node>
        <node id="custom_root/website_example#t7">
            <data key="k10">default_layer</data>
            <data key="k11">and</data>
            <data key="k12">node</data>
            <data key="k15">and</data>
            <data key="k16">CONJ</data>
            <data key="k17">CC</data>
            <data key="k7">cc</data>
        </node>
        <node id="custom_root/website_example#t8">
            <data key="k1">value with space</data>
            <data key="k10">default_layer</data>
            <data key="k11">sell</data>
            <data key="k12">node</data>
            <data key="k15">sell</data>
            <data key="k16">VERB</data>
            <data key="k17">VBP</data>
            <data key="k2">Plur</data>
            <data key="k3">3</data>
            <data key="k6">Pres</data>
            <data key="k7">conj</data>
        </node>
        <node id="custom_root/website_example#t9">
            <data key="k10">default_layer</data>
            <data key="k11">book</data>
            <data key="k12">node</data>
            <data key="k15">books</data>
            <data key="k16">NOUN</data>
            <data key="k17">NNS</data>
            <data key="k2">Plur</data>
            <data key="k5">No</data>
            <data key="k7">obj</data>
            <data key="k8">obj</data>
        </node>
        <node id="custom_root/website_example#t10">
            <data key="k10">default_layer</data>
            <data key="k11">.</data>
            <data key="k12">node</data>
            <data key="k15">.</data>
            <data key="k16">PUNCT</data>
            <data key="k17">.</data>
            <data key="k7">punct</data>
        </node>
        <node id="custom_root/website_example#s3">
            <data key="k12">node</data>
            <data key="k13">1</data>
            <data key="k14">They buy and sell books.</data>
        </node>
        <node id="custom_root/website_example#t14">
            <data key="k0">Nom</data>
            <data key="k10">default_layer</data>
            <data key="k11">I</data>
            <data key="k12">node</data>
            <data key="k15">I</data>
            <data key="k16">PRON</data>
            <data key="k17">PRP</data>
            <data key="k2">Sing</data>
            <data key="k3">1</data>
            <data key="k7">nsubj</data>
        </node>
        <node id="custom_root/website_example#t15">
            <data key="k10">default_layer</data>
            <data key="k11">have</data>
            <data key="k12">node</data>
            <data key="k15">have</data>
            <data key="k16">VERB</data>
            <data key="k17">VBP</data>
            <data key="k2">Sing</data>
            <data key="k3">1</data>
            <data key="k6">Pres</data>
        </node>
        <node id="custom_root/website_example#t16">
            <data key="k10">default_layer</data>
            <data key="k11">no</data>
            <data key="k12">node</data>
            <data key="k15">no</data>
            <data key="k16">DET</data>
            <data key="k17">DT</data>
            <data key="k4">Neg</data>
            <data key="k7">det</data>
        </node>
        <node id="custom_root/website_example#t17">
            <data key="k10">default_layer</data>
            <data key="k11">clue</data>
            <data key="k12">node</data>
            <data key="k15">clue</data>
            <data key="k16">NOUN</data>
            <data key="k17">NN</data>
            <data key="k2">Sing</data>
            <data key="k5">No</data>
            <data key="k7">obj</data>
        </node>
        <node id="custom_root/website_example#t18">
            <data key="k10">default_layer</data>
            <data key="k11">.</data>
            <data key="k12">node</data>
            <data key="k15">.</data>
            <data key="k16">PUNCT</data>
            <data key="k17">.</data>
            <data key="k7">punct</data>
        </node>
        <node id="custom_root/website_example#s12">
            <data key="k12">node</data>
            <data key="k13">2</data>
            <data key="k14">I have no clue.</data>
        </node>
        <edge id="e0" source="custom_root/website_example#s3" target="custom_root/website_example#t5" label="Coverage/annis/">
        </edge>
        <edge id="e1" source="custom_root/website_example#s3" target="custom_root/website_example#t6" label="Coverage/annis/">
        </edge>
        <edge id="e2" source="custom_root/website_example#s3" target="custom_root/website_example#t7" label="Coverage/annis/">
        </edge>
        <edge id="e3" source="custom_root/website_example#s3" target="custom_root/website_example#t8" label="Coverage/annis/">
        </edge>
        <edge id="e4" source="custom_root/website_example#s3" target="custom_root/website_example#t9" label="Coverage/annis/">
        </edge>
        <edge id="e5" source="custom_root/website_example#s3" target="custom_root/website_example#t10" label="Coverage/annis/">
        </edge>
        <edge id="e6" source="custom_root/website_example#s12" target="custom_root/website_example#t14" label="Coverage/annis/">
        </edge>
        <edge id="e7" source="custom_root/website_example#s12" target="custom_root/website_example#t15" label="Coverage/annis/">
        </edge>
        <edge id="e8" source="custom_root/website_example#s12" target="custom_root/website_example#t16" label="Coverage/annis/">
        </edge>
        <edge id="e9" source="custom_root/website_example#s12" target="custom_root/website_example#t17" label="Coverage/annis/">
        </edge>
        <edge id="e10" source="custom_root/website_example#s12" target="custom_root/website_example#t18" label="Coverage/annis/">
        </edge>
        <edge id="e11" source="custom_root/website_example#t6" target="custom_root/website_example#t5" label="Pointing//dep">
            <data key="k7">nsubj</data>
        </edge>
        <edge id="e12" source="custom_root/website_example#t6" target="custom_root/website_example#t8" label="Pointing//dep">
            <data key="k7">conj</data>
        </edge>
        <edge id="e13" source="custom_root/website_example#t6" target="custom_root/website_example#t9" label="Pointing//dep">
            <data key="k7">obj</data>
        </edge>
        <edge id="e14" source="custom_root/website_example#t6" target="custom_root/website_example#t10" label="Pointing//dep">
            <data key="k7">punct</data>
        </edge>
        <edge id="e15" source="custom_root/website_example#t8" target="custom_root/website_example#t7" label="Pointing//dep">
            <data key="k7">cc</data>
        </edge>
        <edge id="e16" source="custom_root/website_example#t15" target="custom_root/website_example#t14" label="Pointing//dep">
            <data key="k7">nsubj</data>
        </edge>
        <edge id="e17" source="custom_root/website_example#t15" target="custom_root/website_example#t17" label="Pointing//dep">
            <data key="k7">obj</data>
        </edge>
        <edge id="e18" source="custom_root/website_example#t15" target="custom_root/website_example#t18" label="Pointing//dep">
            <data key="k7">punct</data>
        </edge>
        <edge id="e19" source="custom_root/website_example#t17" target="custom_root/website_example#t16" label="Pointing//dep">
            <data key="k7">det</data>
        </edge>
        <edge id="e20" source="custom_root/website_example#t8" target="custom_root/website_example#t5" label="Pointing/enh/dep">
            <data key="k7">nsubj</data>
        </edge>
        <edge id="e21" source="custom_root/website_example#t8" target="custom_root/website_example#t9" label="Pointing/enh/dep">
            <data key="k7">obj</data>
        </edge>
        <edge id="e22" source="custom_root/website_example#t5" target="custom_root/website_example#t6" label="Ordering/annis/">
        </edge>
        <edge id="e23" source="custom_root/website_example#t6" target="custom_root/website_example#t7" label="Ordering/annis/">
        </edge>
        <edge id="e24" source="custom_root/website_example#t7" target="custom_root/website_example#t8" label="Ordering/annis/">
        </edge>
        <edge id="e25" source="custom_root/website_example#t8" target="custom_root/website_example#t9" label="Ordering/annis/">
        </edge>
        <edge id="e26" source="custom_root/website_example#t9" target="custom_root/website_example#t10" label="Ordering/annis/">
        </edge>
        <edge id="e27" source="custom_root/website_example#t10" target="custom_root/website_example#t14" label="Ordering/annis/">
        </edge>
        <edge id="e28" source="custom_root/website_example#t14" target="custom_root/website_example#t15" label="Ordering/annis/">
        </edge>
        <edge id="e29" source="custom_root/website_example#t15" target="custom_root/website_example#t16" label="Ordering/annis/">
        </edge>
        <edge id="e30" source="custom_root/website_example#t16" target="custom_root/website_example#t17" label="Ordering/annis/">
        </edge>
        <edge id="e31" source="custom_root/website_example#t17" target="custom_root/website_example#t18" label="Ordering/annis/">
        </edge>
        <edge id="e32" source="custom_root/website_example" target="custom_root" label="PartOf/annis/">
        </edge>
        <edge id="e33" source="custom_root/website_example#t5" target="custom_root/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e34" source="custom_root/website_example#t6" target="custom_root/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e35" source="custom_root/website_example#t7" target="custom_root/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e36" source="custom_root/website_example#t8" target="custom_root/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e37" source="custom_root/website_example#t9" target="custom_root/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e38" source="custom_root/website_example#t10" target="custom_root/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e39" source="custom_root/website_example#s3" target="custom_root/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e40" source="custom_root/website_example#t14" target="custom_root/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e41" source="custom_root/website_example#t15" target="custom_root/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e42" source="custom_root/website_example#t16" target="custom_root/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e43" source="custom_root/website_example#t17" target="custom_root/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e44" source="custom_root/website_example#t18" target="custom_root/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e45" source="custom_root/website_example#s12" target="custom_root/website_example" label="PartOf/annis/">
        </edge>
    </graph>
</graphml>
