src/importer/conllu/snapshots/annatto__importer__conllu__tests__serialize.snap
---
source: src/importer/conllu/tests.rs
expression: serialization.unwrap()
---
comment_anno = "conll::comment"
labeled_targets = false
