src/importer/conllu/snapshots/annatto__importer__conllu__tests__serialize_custom.snap
---
source: src/importer/conllu/tests.rs
expression: serialization.unwrap()
---
comment_anno = "default_ns::metadata"
multi_tok = "norm::norm"
labeled_targets = true
